--- a/First_react/src/App.css
+++ b/First_react/src/App.css
@@ -40,3 +40,15 @@
 .read-the-docs {
   color: #888;
 }
+.box{
+  width: 350px ;
+  height:100% ;
+  color: aliceblue ;
+  border: 5px black solid ;
+  margin:auto ;
+  margin-bottom: 10px ;
+}
+#box1{
+  
+  background-color: brown;
+  padding: 16px;
